Bug Fixes
Buy Seeds.php - declaring empty validation variables
.css - fixing the buy seeds validation border colour as it was invisible.

--- a/css/buy-seeds.css
+++ b/css/buy-seeds.css
@@ -2646,13 +2646,15 @@ textarea.textarea.is-button + .textarea-button button {
     height: auto!important;
     padding: 16px 22px;
     border-radius: 40px;
-    border: none;
+    border: 2px solid #fff;
     color: var(--forest);
     width: fit-content;
     max-width: none;
     min-width: 280px;
 
   }
+
+
 
     .actual-field .input:focus {
       outline:none!important;
@@ -2662,6 +2664,12 @@ textarea.textarea.is-button + .textarea-button button {
     color:var(--forest);
     opacity:.5;
   }
+
+    #accountname
+    {
+        text-align: center;
+        font-size: 20px;
+    }
 
   .steps-actions {
     background:var(--sand);
